--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div class="content">
       <div class="text">
         <h2>Its Finger<br>Lickin <span>Good.</span></h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, adipisci obcaecati! Accusamus fugiat obcaecati nesciunt maiores rerum placeat amet voluptatibus cumque soluta similique saepe, assumenda eos dolorum autem. Iusto enim accusamus optio cupiditate earum ipsam!</p>
+        <p>  
+          KFC uses real indian village naati koli because a local bird is a fresh bird. Our fresh chicken is carefully hand-breaded and rolled 7 times in the secret blend of herbs and spices before being scooped and folded in the breading mix 7 times. The chicken is then pressure cooked at a low temperature in high stability canola oil to preserve that great taste we're known for around the world.</p>
         <a href="#" class="btn">Order Now</a>
       </div>
       <div class="slider">
