--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
     <div class="content">
       <div class="text">
-        <h5>Its Finger<br>Lickin <span>Good.</span></h5>
+        <p>Its Finger<br>Lickin <span>Good.</span></p>
         <p>  
           KFC uses real indian village naati koli because a local bird is a fresh bird. Our fresh chicken is carefully hand-breaded and rolled 7 times in the secret blend of herbs and spices before being scooped and folded in the breading mix 7 times. The chicken is then pressure cooked at a low temperature in high stability canola oil to preserve that great taste we're known for around the world.</p>
         <a href="#" class="btn">Order Now</a>
