--- a/index.html
+++ b/index.html
@@ -23,7 +23,39 @@
         <p>Its Finger<br>Lickin <span>Good.</span></p>
         <p>  
           KFC uses real indian village naati koli because a local bird is a fresh bird. Our fresh chicken is carefully hand-breaded and rolled 7 times in the secret blend of herbs and spices before being scooped and folded in the breading mix 7 times. The chicken is then pressure cooked at a low temperature in high stability canola oil to preserve that great taste we're known for around the world.</p>
-        <a href="#" class="btn">Order Now</a>
+        
+        <!DOCTYPE html> 
+<html> 
+	
+<head> 	
+	<!-- Style to create button -->
+	<style> 
+		.GFG { 
+			background-color: white; 
+			border: 2px solid black; 
+			color: green; 
+			padding: 5px 10px; 
+			text-align: center; 
+			display: inline-block; 
+			font-size: 20px; 
+			margin: 10px 30px; 
+			cursor: pointer; 
+		} 
+	</style> 
+</head> 
+
+<body> 
+	<h1>KFC</h1> 
+	
+	<!-- Adding link to the button on the onclick event -->
+	<button class="GFG"
+	onclick="window.location.href = 'https://online.kfc.co.in/';"> 
+		order Now 
+	</button> 
+</body> 
+
+</html>					 
+
       </div>
       <div class="slider">
         <div class="slides active">
