--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <div class="slides active">
           <img src="burger_fries.png">
         </div>
+	 <div class="slides active">
+          <img src="maggie.jpeg">
+        </div>
         <div class="slides">
           <img src="french_fries.png">
         </div>
