--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="text">
         <p>Its Finger<br>Lickin <span>Good.</span></p>
         <p>  
-          KFC uses real indian village naati koli because a local bird is a fresh bird. Our fresh chicken is carefully hand-breaded and rolled 7 times in the secret blend of herbs and spices before being scooped and folded in the breading mix 7 times. The chicken is then pressure cooked at a low temperature in high stability canola oil to preserve that great taste we're known for around the world.</p>
+        HUnger-HUb uses real indian village naati koli because a local bird is a fresh bird. Our fresh chicken is carefully hand-breaded and rolled 7 times in the secret blend of herbs and spices before being scooped and folded in the breading mix 7 times. The chicken is then pressure cooked at a low temperature in high stability canola oil to preserve that great taste we're known for around the world.</p>
         
         <!DOCTYPE html> 
 <html> 
@@ -45,7 +45,6 @@
 </head> 
 
 <body> 
-	<h1>KFC</h1> 
 	
 	<!-- Adding link to the button on the onclick event -->
 	<button class="GFG"
