--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section class="main">
     <header>
-      <a href="#"><img src="logo.png" class="logo"></a>
+      <a href="#"><img src="hh.jpeg" class="logo"></a>
       <div class="toggle"></div>
       <ul class="navigation">
         <li><a href="#">Home</a></li>
