--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section class="main">
     <header>
-      <a href="#"><img src="hh.jpeg" class="logo"></a>
+      <a href="#"><img src="logo.png" class="logo"></a>
       <div class="toggle"></div>
       <ul class="navigation">
         <li><a href="#">Home</a></li>
@@ -22,7 +22,7 @@
       <div class="text">
         <p>Its Finger<br>Lickin <span>Good.</span></p>
         <p>  
-        HUnger-HUb uses real indian village naati koli because a local bird is a fresh bird. Our fresh chicken is carefully hand-breaded and rolled 7 times in the secret blend of herbs and spices before being scooped and folded in the breading mix 7 times. The chicken is then pressure cooked at a low temperature in high stability canola oil to preserve that great taste we're known for around the world.</p>
+        KFC uses real indian village naati koli because a local bird is a fresh bird. Our fresh chicken is carefully hand-breaded and rolled 7 times in the secret blend of herbs and spices before being scooped and folded in the breading mix 7 times. The chicken is then pressure cooked at a low temperature in high stability canola oil to preserve that great taste we're known for around the world.</p>
         
         <!DOCTYPE html> 
 <html> 
@@ -60,9 +60,6 @@
         <div class="slides active">
           <img src="burger_fries.png">
         </div>
-	 <div class="slides active">
-          <img src="maggie.jpeg">
-        </div>
         <div class="slides">
           <img src="french_fries.png">
         </div>
@@ -71,6 +68,12 @@
         </div>
         <div class="slides">
           <img src="fried_chicken.png">
+        </div>
+	 <div class="slides active">
+          <img src="maggie.jpeg">
+        </div>
+	 <div class="slides active">
+          <img src="biryani.png">
         </div>
       </div>
     </div>
